[285004] new contact policy linking , jumpList , plan ID , date errors fixed (#1633)

--- a/src/packages/Modal/styles.module.scss
+++ b/src/packages/Modal/styles.module.scss
@@ -1,7 +1,7 @@
 @import "src/scss/globalDefines.scss";
 
 .modalContentContainer {
-  height: 90vh;
+  max-height: 90vh;
   overflow: auto;
   position: absolute;
   top: 50%;
